--- a/src/client/View/Event/EventListView.fxml
+++ b/src/client/View/Event/EventListView.fxml
@@ -1,91 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="659.0" prefWidth="1119.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EventListViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="690.0" prefWidth="1119.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EventListViewController">
    <children>
       <GridPane alignment="CENTER" prefHeight="175.0" prefWidth="794.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="850.0" minWidth="10.0" prefWidth="722.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="392.0" minWidth="10.0" prefWidth="105.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="850.0" minWidth="10.0" percentWidth="10.0" prefWidth="722.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="850.0" minWidth="10.0" percentWidth="80.0" prefWidth="722.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="392.0" minWidth="10.0" percentWidth="10.0" prefWidth="105.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints maxHeight="270.0" minHeight="10.0" prefHeight="55.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="270.0" minHeight="10.0" prefHeight="120.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <VBox prefHeight="110.0" prefWidth="658.0" GridPane.rowIndex="1">
-               <children>
-                  <HBox alignment="CENTER_LEFT" prefHeight="65.0" prefWidth="658.0">
-                     <children>
-                        <Label prefHeight="54.0" prefWidth="92.0" text=" Search :">
-                           <font>
-                              <Font size="22.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="searchTextField" prefHeight="33.0" prefWidth="382.0" />
-                     </children>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT" prefHeight="72.0" prefWidth="658.0">
-                     <children>
-                        <Label text=" Search by date :">
-                           <font>
-                              <Font size="22.0" />
-                           </font>
-                        </Label>
-                        <TextField fx:id="ySTextField" prefHeight="33.0" prefWidth="90.0" promptText="Year" />
-                        <Label prefHeight="29.0" prefWidth="20.0" text="  :  " />
-                        <TextField fx:id="mSTextField" prefHeight="33.0" prefWidth="89.0" promptText="Month" />
-                        <Label prefHeight="29.0" prefWidth="20.0" text="  :  " />
-                        <TextField fx:id="dSTextField" prefHeight="33.0" prefWidth="80.0" promptText="Day" />
-                        <Label fx:id="dateInfoLabel" prefHeight="34.0" prefWidth="42.0">
-                           <graphic>
-                              <ImageView fitHeight="34.0" fitWidth="36.0">
-                                 <image>
-                                    <Image url="@../Icons/icons8-help-100.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic></Label>
-                     </children>
-                  </HBox>
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="50.0" prefWidth="317.0" GridPane.columnIndex="1">
-               <children>
-                  <Button fx:id="refreshButton" mnemonicParsing="false" onAction="#refreshPress" prefHeight="45.0" prefWidth="41.0">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="33.0" fitWidth="35.0">
-                           <image>
-                              <Image url="@../Icons/icons8-refresh-100.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-               </children>
-            </VBox>
-            <VBox alignment="CENTER" prefHeight="110.0" prefWidth="244.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <children>
-                  <Button fx:id="searchButton" mnemonicParsing="false" onAction="#searchPress" prefHeight="40.0" prefWidth="48.0">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                     <graphic>
-                        <ImageView fitHeight="48.0" fitWidth="50.0">
-                           <image>
-                              <Image url="@../Icons/icons8-search-100.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-               </children>
-            </VBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
                   <Label text="Events     ">
                      <font>
@@ -99,31 +43,90 @@
                   </ImageView>
                </children>
             </HBox>
+            <VBox alignment="CENTER" prefHeight="110.0" prefWidth="658.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <HBox alignment="CENTER" prefHeight="65.0" prefWidth="658.0">
+                     <children>
+                        <Label prefHeight="54.0" prefWidth="92.0" text=" Search :">
+                           <font>
+                              <Font size="22.0" />
+                           </font>
+                        </Label>
+                        <TextField fx:id="searchTextField" onAction="#searchPress" onKeyTyped="#searchPress" prefHeight="40.0" prefWidth="382.0">
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Button fx:id="searchButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#searchPress" prefHeight="40.0" prefWidth="40.0">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="37.0" fitWidth="43.0" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../Icons/icons8-search-100.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="72.0" prefWidth="658.0">
+                     <children>
+                        <Label text=" Search by date :">
+                           <font>
+                              <Font size="22.0" />
+                           </font>
+                        </Label>
+                        <DatePicker fx:id="datePicker" prefHeight="40.0" prefWidth="231.0" promptText="Date">
+                           <HBox.margin>
+                              <Insets right="10.0" />
+                           </HBox.margin>
+                        </DatePicker>
+                        <Button fx:id="searchByDateButton" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#searchByDatePress" prefHeight="40.0" prefWidth="40.0">
+                           <font>
+                              <Font size="17.0" />
+                           </font>
+                           <graphic>
+                              <ImageView fitHeight="37.0" fitWidth="43.0" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../Icons/icons8-search-100.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                        <Label fx:id="dateInfoLabel" prefHeight="34.0" prefWidth="42.0">
+                           <graphic>
+                              <ImageView fitHeight="34.0" fitWidth="36.0">
+                                 <image>
+                                    <Image url="@../Icons/icons8-help-100.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                           <HBox.margin>
+                              <Insets left="10.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
          </children>
       </GridPane>
-      <VBox alignment="TOP_RIGHT" prefHeight="342.0" prefWidth="794.0">
-         <children>
-            <ScrollPane prefHeight="340.0" prefWidth="880.0">
-               <content>
-                  <TableView fx:id="eventList" prefHeight="335.0" prefWidth="1112.0">
-                    <columns>
-                        <TableColumn fx:id="idColumn" prefWidth="53.0" text="ID" />
-                      <TableColumn fx:id="titleColumn" prefWidth="90.0" text="Title" />
-                      <TableColumn fx:id="descriptionColumn" prefWidth="93.0" text="Description" />
-                        <TableColumn fx:id="creatTColumn" prefWidth="131.0" text="Create time" />
-                        <TableColumn fx:id="dateColumn" prefWidth="131.0" text="Date" />
-                        <TableColumn fx:id="endTColumn" prefWidth="89.0" text="End time" />
-                        <TableColumn fx:id="isOnlineColumn" prefWidth="93.0" text="Online ?" />
-                        <TableColumn fx:id="platformColumn" prefWidth="60.0" text="Platform" />
-                        <TableColumn fx:id="roomColumn" prefWidth="66.0" text="Room" />
-                        <TableColumn fx:id="creatorColumn" prefWidth="119.0" text="Creator" />
-                        <TableColumn fx:id="sizeColumn" prefWidth="174.0" text="Number of participants" />
-                    </columns>
-                  </TableView>
-               </content>
-            </ScrollPane>
-         </children>
-      </VBox>
+      <TableView fx:id="eventList" prefHeight="335.0" prefWidth="1112.0">
+        <columns>
+            <TableColumn fx:id="idColumn" prefWidth="38.399993896484375" text="ID" />
+          <TableColumn fx:id="titleColumn" prefWidth="185.59997177124023" text="Title" />
+            <TableColumn fx:id="dateColumn" minWidth="0.0" prefWidth="213.6000213623047" text="Date and time" />
+            <TableColumn fx:id="platformColumn" prefWidth="98.39996337890625" text="Platform" />
+            <TableColumn fx:id="roomColumn" prefWidth="196.7999267578125" text="Room" />
+            <TableColumn fx:id="creatorColumn" prefWidth="209.60009765625" text="Creator" />
+            <TableColumn fx:id="noOfParticipantsColumn" prefWidth="139.20001220703125" text="No. of participants" />
+        </columns>
+         <VBox.margin>
+            <Insets />
+         </VBox.margin>
+      </TableView>
       <VBox prefHeight="48.0" prefWidth="794.0">
          <children>
             <Label fx:id="errorLabel" prefHeight="42.0" prefWidth="749.0" text="errorLabel" textFill="RED" />
@@ -207,14 +210,14 @@
             </VBox>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" GridPane.columnIndex="3">
                <children>
-                  <Button fx:id="infoButton" mnemonicParsing="false" onAction="#infoPress" prefHeight="34.0" prefWidth="18.0">
+                  <Button fx:id="openButton" mnemonicParsing="false" onAction="#openPress" prefHeight="34.0" prefWidth="18.0">
                      <font>
                         <Font size="24.0" />
                      </font>
                      <graphic>
                         <ImageView fitHeight="46.0" fitWidth="48.0">
                            <image>
-                              <Image url="@../Icons/icons8-info-squared-100.png" />
+                              <Image url="@../Icons/eventInfoIcon.png" />
                            </image>
                         </ImageView>
                      </graphic>
@@ -224,4 +227,7 @@
          </children>
       </GridPane>
    </children>
+   <padding>
+      <Insets bottom="10.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </VBox>
