--- a/src/client/View/Event/EventInfoView.fxml
+++ b/src/client/View/Event/EventInfoView.fxml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="583.0" prefWidth="660.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EventInfoViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="741.0" prefWidth="684.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EventInfoViewController">
    <children>
       <HBox alignment="CENTER" prefHeight="81.0" prefWidth="600.0" style="-fx-background-color: #7f878f;">
          <children>
@@ -16,13 +27,13 @@
             </Label>
             <ImageView fitHeight="67.0" fitWidth="74.0">
                <image>
-                  <Image url="@../Icons/icons8-info-squared-100.png" />
+                  <Image url="@../Icons/eventInfoIcon.png" />
                </image>
             </ImageView>
             <Label prefHeight="15.0" prefWidth="212.0" text="    " />
-            <Button mnemonicParsing="false" onAction="#backPress" prefHeight="22.0" prefWidth="19.0">
+            <Button cancelButton="true" mnemonicParsing="false" onAction="#backPress" prefHeight="22.0" prefWidth="19.0">
                <graphic>
-                  <ImageView fitHeight="44.0" fitWidth="38.0">
+                  <ImageView fitHeight="44.0" fitWidth="38.0" mouseTransparent="true">
                      <image>
                         <Image url="@../Icons/icons8-go-back-100.png" />
                      </image>
@@ -31,193 +42,189 @@
             </Button>
          </children>
       </HBox>
-      <GridPane prefHeight="496.0" prefWidth="600.0">
+      <GridPane prefHeight="422.0" prefWidth="684.0">
         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" percentWidth="5.0" prefWidth="195.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="295.0" minWidth="10.0" prefWidth="195.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="483.0" minWidth="10.0" prefWidth="465.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="103.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="181.0" minHeight="0.0" prefHeight="68.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="217.0" minHeight="0.0" prefHeight="45.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="184.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="190.0" minHeight="0.0" prefHeight="34.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="237.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="36.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="57.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="217.0" minHeight="0.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="184.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="237.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="190.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Label text="Title : ">
+                  <Label text="Title: ">
                      <font>
-                        <Font size="22.0" />
+                        <Font size="29.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2">
                <children>
                   <TextField fx:id="titleTextField" prefHeight="23.0" prefWidth="406.0" />
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
+            <HBox alignment="TOP_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Label text="Description : ">
+                  <Label text="Description: ">
                      <font>
                         <Font size="18.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
                <children>
-                  <TextArea fx:id="desArea" prefHeight="59.0" prefWidth="405.0" />
+                  <TextArea fx:id="descriptionField" prefHeight="59.0" prefWidth="405.0" />
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="2">
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <Label text="Start Time : ">
+                  <Label text="Start Time: ">
                      <font>
-                        <Font size="20.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
                <children>
                   <Label fx:id="startTimeLabel" prefHeight="30.0" prefWidth="402.0" text="start time">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="3">
-               <children>
-                  <Label text="End time : ">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
-               <children>
-                  <Label fx:id="endTimeLabel" prefHeight="30.0" prefWidth="407.0" text="end time">
-                     <font>
-                        <Font size="23.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="4">
-               <children>
-                  <Label text="Meeting type : ">
                      <font>
                         <Font size="16.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <Label fx:id="typeLabel" prefHeight="27.0" prefWidth="408.0" text="type">
+                  <Label text="End time: ">
                      <font>
-                        <Font size="20.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="5">
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <children>
-                  <Label text="Platform : ">
+                  <Label fx:id="endTimeLabel" prefHeight="30.0" prefWidth="407.0" text="end time">
                      <font>
-                        <Font size="22.0" />
+                        <Font size="16.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+               <children>
+                  <Label text="Platform: ">
+                     <font>
+                        <Font size="18.0" />
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4">
                <children>
                   <Label fx:id="platformLabel" prefHeight="29.0" prefWidth="396.0" text="platform">
                      <font>
-                        <Font size="22.0" />
+                        <Font size="16.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="6">
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
-                  <Label text="Link : ">
+                  <Label text="Link: ">
                      <font>
-                        <Font size="27.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="5">
                <children>
-                  <Label fx:id="linkLabel" prefHeight="32.0" prefWidth="404.0" text="link">
+                  <TextField fx:id="linkTextField" prefHeight="26.0" prefWidth="306.0" />
+                  <Button mnemonicParsing="false" onAction="#copyPressed" text="Copy to clipboard" />
+               </children>
+            </HBox>
+            <HBox alignment="CENTER_RIGHT" GridPane.columnIndex="1" GridPane.rowIndex="6">
+               <children>
+                  <Label text="Room: ">
                      <font>
-                        <Font size="24.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="7">
+            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="2" GridPane.rowIndex="6">
                <children>
-                  <Label text="Room : ">
+                  <Label fx:id="roomLabel" text="room">
                      <font>
-                        <Font size="20.0" />
+                        <Font size="16.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+            <HBox alignment="CENTER_RIGHT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <children>
-                  <Label fx:id="roomLabel" prefHeight="32.0" prefWidth="209.0" text="room">
+                  <Label text="Creator:  ">
                      <font>
-                        <Font size="24.0" />
+                        <Font size="18.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="8">
+            <HBox alignment="CENTER_LEFT" GridPane.columnIndex="2" GridPane.rowIndex="7">
                <children>
-                  <Label text="Creator &amp; participant: ">
+                  <Label fx:id="creatorLabel" text="creator">
                      <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="65.0" prefWidth="482.0" GridPane.columnIndex="1" GridPane.rowIndex="8">
-               <children>
-                  <TextArea fx:id="employeeInfoArea" prefHeight="49.0" prefWidth="410.0" />
-               </children>
-            </HBox>
-            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="9">
-               <children>
-                  <Label text="Create time : ">
-                     <font>
-                        <Font size="17.0" />
-                     </font>
-                  </Label>
-               </children>
-            </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="9">
-               <children>
-                  <Label fx:id="createTimeLabel" prefHeight="30.0" prefWidth="411.0" text="crate time">
-                     <font>
-                        <Font size="23.0" />
+                        <Font size="16.0" />
                      </font>
                   </Label>
                </children>
             </HBox>
          </children>
       </GridPane>
+      <HBox alignment="CENTER">
+         <children>
+            <Label text="Participants:">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+      <TableView fx:id="employeeTable" prefHeight="200.0" prefWidth="200.0">
+         <columns>
+            <TableColumn fx:id="idColumn" minWidth="0.0" prefWidth="48.0" text="ID" />
+            <TableColumn fx:id="nameColumn" minWidth="0.0" prefWidth="159.20001220703125" text="Name" />
+            <TableColumn fx:id="surnameColumn" prefWidth="248.0" text="Surname" />
+            <TableColumn fx:id="roleColumn" minWidth="0.0" prefWidth="196.800048828125" text="Role" />
+         </columns>
+         <VBox.margin>
+            <Insets bottom="20.0" left="20.0" right="20.0" top="10.0" />
+         </VBox.margin>
+      </TableView>
+      <HBox alignment="CENTER">
+         <children>
+            <Label fx:id="errorLabel" text="errorLabel" textFill="RED">
+               <font>
+                  <Font size="11.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
    </children>
+   <padding>
+      <Insets bottom="10.0" />
+   </padding>
 </VBox>
